Add margin adjustment for last child in body styles

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -177,6 +177,10 @@ body {
     display: inline-block;
     margin-right: 1rem;
 
+    &:last-child {
+      margin-right: 0;
+    }
+
     @include non-mobile {
       margin-right: 0;
       overflow: hidden;
