--- a/src/_includes/baselayout.njk
+++ b/src/_includes/baselayout.njk
@@ -15,6 +15,8 @@ title: Tsuru No Mundo - Daily
             href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@300;400;500;700;800;900&display=swap"
             rel="stylesheet">
         <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+        <script src="js/img-loading.js"></script>
+        <script src="js/script.js" defer></script>
     </head>
     <body>
         {{ content | safe }}
