--- a/src/_includes/_me.liquid
+++ b/src/_includes/_me.liquid
@@ -1,16 +1,31 @@
 <section class="me__images">
-  <img
-    src="../images/me/3.webp"
-    alt="A picture of me"
-    class="me__images__image">
-  <img
-    src="../images/me/1.webp"
-    alt="A picture of me"
-    class="me__images__image">
-  <img
-    src="../images/me/2.webp"
-    alt="A picture of me"
-    class="me__images__image">
+  <div
+    img-loading-me
+    il-thumbnail="../images/me/thumbnail/il-2d57842b-292d-4350-8a97-fb52cc58b4e8.webp"
+    il-fullsize="../images/me/2d57842b-292d-4350-8a97-fb52cc58b4e8.webp"
+    il-width="1080"
+    il-height="1440"
+    il-aspect-ratio="1080/1440"
+    il-main-color="rgb(117,125,110)"></div>
+
+  <div
+    img-loading-me
+    il-thumbnail="../images/me/thumbnail/il-69e24e41-5304-48ea-8d56-936791f88f85.webp"
+    il-fullsize="../images/me/69e24e41-5304-48ea-8d56-936791f88f85.webp"
+    il-width="1080"
+    il-height="1440"
+    il-aspect-ratio="1080/1440"
+    il-main-color="rgb(120,96,93)"></div>
+
+  <div
+    img-loading-me
+    il-thumbnail="../images/me/thumbnail/il-77276520-7c0c-4897-a2d4-493a48f4c55e.webp"
+    il-fullsize="../images/me/77276520-7c0c-4897-a2d4-493a48f4c55e.webp"
+    il-width="1080"
+    il-height="1440"
+    il-aspect-ratio="1080/1440"
+    il-main-color="rgb(105,111,113)"></div>
+
 </section>
 <div class="me__section">
   {% renderFile "./src/_includes/me.md" %}
