--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -271,6 +271,10 @@ body {
     aspect-ratio: var(--il-aspect-ratio);
     background: var(--il-main-color);
 
+    &[img-loading-me] {
+      display: inline-block !important;
+    }
+
     #{$prefix}-img,
     #{$prefix}-thumbnail {
       position: absolute;
