Add img-loading class to image elements in the profile section

--- a/src/_includes/_me.liquid
+++ b/src/_includes/_me.liquid
@@ -1,5 +1,6 @@
 <section class="me__images">
   <div
+    class="me__images__image"
     img-loading-me
     il-thumbnail="../images/me/thumbnail/il-2d57842b-292d-4350-8a97-fb52cc58b4e8.webp"
     il-fullsize="../images/me/2d57842b-292d-4350-8a97-fb52cc58b4e8.webp"
@@ -9,6 +10,7 @@
     il-main-color="rgb(117,125,110)"></div>
 
   <div
+    class="me__images__image"
     img-loading-me
     il-thumbnail="../images/me/thumbnail/il-69e24e41-5304-48ea-8d56-936791f88f85.webp"
     il-fullsize="../images/me/69e24e41-5304-48ea-8d56-936791f88f85.webp"
@@ -18,6 +20,7 @@
     il-main-color="rgb(120,96,93)"></div>
 
   <div
+    class="me__images__image"
     img-loading-me
     il-thumbnail="../images/me/thumbnail/il-77276520-7c0c-4897-a2d4-493a48f4c55e.webp"
     il-fullsize="../images/me/77276520-7c0c-4897-a2d4-493a48f4c55e.webp"
