--- a/src/_includes/_me.liquid
+++ b/src/_includes/_me.liquid
@@ -7,7 +7,16 @@
     il-width="1080"
     il-height="1440"
     il-aspect-ratio="1080/1440"
-    il-main-color="rgb(117,125,110)"></div>
+    il-main-color="rgb(117,125,110)"
+    style="
+      max-width: 100%;
+      max-height: 100%;
+      background-color: rgb(117,125,110);
+      aspect-ratio: 1080/1440;
+      overflow: hidden;
+      display: inline-block;
+    "></div>
+</div>
 
   <div
     class="me__images__image"
@@ -17,7 +26,16 @@
     il-width="1080"
     il-height="1440"
     il-aspect-ratio="1080/1440"
-    il-main-color="rgb(120,96,93)"></div>
+    il-main-color="rgb(120,96,93)"
+    style="
+      max-width: 100%;
+      max-height: 100%;
+      background-color: rgb(120,96,93);
+      aspect-ratio: 1080/1440;
+      overflow: hidden;
+      display: inline-block;
+    "
+    ></div>
 
   <div
     class="me__images__image"
@@ -27,7 +45,17 @@
     il-width="1080"
     il-height="1440"
     il-aspect-ratio="1080/1440"
-    il-main-color="rgb(105,111,113)"></div>
+    il-main-color="rgb(105,111,113)"
+    
+    style="
+    max-width: 100%;
+    max-height: 100%;
+    background-color: rgb(105,111,113);
+    aspect-ratio: 1080/1440;
+    overflow: hidden;
+    display: inline-block;
+  "
+    ></div>
 
 </section>
 <div class="me__section">
