--- a/src/index.liquid
+++ b/src/index.liquid
@@ -25,6 +25,7 @@ layout: baselayout.njk
             height: auto;
             background-color: {{post.mainColor}};
             aspect-ratio: {{post.width}}/{{post.height}};
+            overflow: hidden;
           ">
 </div>
         <main class="tsuru__caption">
