Update row-height CSS variable to use svh unit for better responsiveness

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,6 +1,6 @@
 :root {
   --column-width: min(300px, calc(75vw - 2 * 1rem));
-  --row-height: max(100px, 12dvh);
+  --row-height: max(100px, 12svh);
 }
 body,
 html {
