--- a/src/_includes/_footer.liquid
+++ b/src/_includes/_footer.liquid
@@ -1,6 +1,11 @@
 <footer class="footer">
   <section class="footer__text__section">
-    <p>Tsuru No Mundo - Daily</p>
+    <p>Tsuru No Mundo - Daily
+      <small>{{ version }}</small>
+    </p>
+    <p>
+      <small>Updated at {{ buildTime }}</small>
+    </p>
   </section>
   <ul class="footer__social-links">
     <li class="footer__social-links__item">
