--- a/src/_includes/baselayout.njk
+++ b/src/_includes/baselayout.njk
@@ -14,6 +14,9 @@ title: Tsuru No Mundo - Daily
         <link
             href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@300;400;500;700;800;900&display=swap"
             rel="stylesheet">
+        <link
+            href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
+            rel="stylesheet">
         <link rel="icon" href="images/favicon.ico" type="image/x-icon">
         <script src="js/img-loading.js"></script>
         <script src="js/script.js" defer></script>
@@ -25,6 +28,7 @@ title: Tsuru No Mundo - Daily
         {% include '_donate.liquid' %}
         {{ content | safe }}
         {% include '_me.liquid' %}
+        {% include '_changeLog.liquid' %}
         {% include '_footer.liquid' %}
         {% include '_filters.liquid' %}
     </body>
