update changelog for version 1.0.2 and set fixed aspect-ratio for images

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -472,7 +472,7 @@ body {
     display: block;
     position: relative;
     overflow: hidden;
-    aspect-ratio: var(--il-aspect-ratio);
+    aspect-ratio: 3/4;
     background: var(--il-main-color);
 
     &[img-loading-me] {
