--- a/src/_includes/baselayout.njk
+++ b/src/_includes/baselayout.njk
@@ -31,5 +31,10 @@ title: Tsuru No Mundo - Daily
         {% include '_changeLog.liquid' %}
         {% include '_footer.liquid' %}
         {% include '_filters.liquid' %}
+        <div class="modal">
+            <div class="modal__content">
+                <section class="modal__image"></section>
+            </div>
+        </div>
     </body>
 </html>
