--- a/src/index.liquid
+++ b/src/index.liquid
@@ -17,6 +17,7 @@ layout: baselayout.njk
       <div class="tsuru">
         <div
           img-loading
+          il-uuid="{{post.uuid}}"
           il-thumbnail="{{post.thumbnail}}"
           il-fullsize="images/{{post.image}}"
           il-width="{{post.width}}"
