--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -42,12 +42,12 @@ body {
   flex-direction: column;
   column-gap: 1rem;
   row-gap: 1rem;
-  padding: 1rem;
   overflow-x: hidden;
   overflow-y: auto;
   max-width: 100dvw;
 
   @include non-mobile {
+    padding: 1rem;
     display: grid;
     grid-template-columns: var(--column-width) var(--column-width) auto;
     grid-template-rows: initial;
@@ -161,7 +161,7 @@ body {
     overflow-x: auto;
     white-space: nowrap;
 
-    padding-bottom: 2rem;
+    padding-bottom: 4rem;
 
     @include non-mobile {
       white-space: initial;
@@ -213,8 +213,11 @@ body {
     display: inline-block;
     margin-right: 1rem;
 
-    &:last-child {
-      margin-right: 0;
+    &:first-child {
+      margin-left: 1rem;
+      @include non-mobile {
+        margin-left: 0;
+      }
     }
 
     @include non-mobile {
@@ -253,8 +256,11 @@ body {
   width: var(--column-width);
   margin-right: 1rem;
 
-  &:last-child {
-    margin-right: 0;
+  &:first-child {
+    margin-left: 1rem;
+    @include non-mobile {
+      margin-left: 0;
+    }
   }
 
   @include non-mobile {
@@ -446,7 +452,22 @@ body {
 
 .header,
 .footer,
+.donate,
+.me__section,
+.changelog,
+.about {
+  padding-left: 1rem;
+  padding-right: 1rem;
+  @include non-mobile() {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
+.header,
+.footer,
 .me__images,
+.me__section,
 .donate,
 .changelog,
 .about {
@@ -458,6 +479,7 @@ body {
     .header,
     .footer,
     .me__images,
+    .me__section,
     .donate,
     .changelog,
     .about {
