--- a/src/_includes/baselayout.njk
+++ b/src/_includes/baselayout.njk
@@ -30,6 +30,7 @@ title: Tsuru No Mundo - Daily
         {% include '_me.liquid' %}
         {% include '_changeLog.liquid' %}
         {% include '_footer.liquid' %}
+        {% include '_neighbors.liquid' %}
         {% include '_filters.liquid' %}
         <div class="modal">
             <div class="modal__content">
