--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 :root {
   --column-width: min(300px, calc(75vw - 2 * 1rem));
   --row-height: max(100px, 12lvh);
@@ -70,11 +72,54 @@ body {
 
 .header {
   grid-area: header;
-  display: grid;
-  grid-template-columns: subgrid;
-  align-items: baseline;
 
   padding-top: 1rem;
+
+  &__aka {
+    margin-top: 1rem;
+    p {
+      margin: 0;
+    }
+
+    flex: 1;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
+  }
+
+  @include non-mobile() {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__title {
+    strong {
+      color: #1d9fb3;
+    }
+  }
+
+  &__translated-title {
+    color: white;
+    font-weight: 300;
+    font-size: 1rem;
+    font-style: italic;
+    display: block;
+    line-height: 1;
+    margin: 0;
+
+    &__container {
+      height: 1rem;
+      display: block;
+      overflow: hidden;
+      position: relative;
+
+      &__inner {
+        position: relative;
+      }
+    }
+  }
 
   @include non-mobile {
     padding-top: 0;
