--- a/src/_includes/pagesLayout.njk
+++ b/src/_includes/pagesLayout.njk
@@ -17,10 +17,9 @@ title: Tsuru No Mundo - Daily
         <link
             href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
             rel="stylesheet">
-        <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
         <script src="../js/img-loading.js"></script>
         <script src="../js/script.js" defer></script>
-        <script src="../js/filters.js" defer></script>
     </head>
     <body>
         {% include '_header.liquid' %}
@@ -31,19 +30,5 @@ title: Tsuru No Mundo - Daily
         {% include '_changeLog.liquid' %}
         {% include '_neighbors.liquid' %}
         {% include '_footer.liquid' %}
-        {% include '_filters.liquid' %}
-        <div class="modal">
-            <div class="modal__content">
-                <section class="modal__image"></section>
-            </div>
-        </div>
-        <svg id="modal-mouse" viewbox="0 0 500 400">
-            <path id="curve" d="M100,200 C100,0,400,0,400,200 C400,400,100,400,100,200" fill="transparent"/>
-            <text width="300" fill="currentColor">
-                <textPath xlink:href="#curve" startoffset="0%">
-                    Click anywhere to exit.
-                </textPath>
-            </text>
-        </svg>
     </body>
 </html>
