--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -186,6 +186,17 @@ body {
   }
 }
 
+.md-flex {
+  & > p {
+    margin: 0;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 1rem;
+  }
+}
+
 .page {
   overflow: hidden;
 
@@ -203,7 +214,7 @@ body {
   code {
     display: block;
     background: rgba(0, 0, 0, 0.3);
-    padding: 0.25rem;
+    padding: 1rem;
     font-family: Roboto Mono, serif;
     font-optical-sizing: auto;
     font-style: normal;
