--- a/src/_includes/pagesLayout.njk
+++ b/src/_includes/pagesLayout.njk
@@ -9,6 +9,7 @@ title: Tsuru No Mundo - Daily
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{{ title }}</title>
         <link rel="stylesheet" href="../css/styles.css">
+        <link rel="stylesheet" href="../css/highlight.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link
