update CHANGELOG for version 1.0.11, add new pages for site information and sitemap to enhance navigation

--- a/src/_includes/_footer.liquid
+++ b/src/_includes/_footer.liquid
@@ -1,4 +1,7 @@
 <footer class="footer">
+  {% renderFile "./src/_includes/sitemap.md" %}
+
+  <hr/>
   <section class="footer__text__section">
     <p>Tsuru No Mundo - Daily
       <small>{{ version }}</small>
