--- a/src/_includes/_changeLog.liquid
+++ b/src/_includes/_changeLog.liquid
@@ -1,5 +1,6 @@
 <div class="changelog">
   <div class="changelog__wrapper">
+    {% renderFile "./src/_includes/aboutThisPage.md" %}
     {% renderFile "./CHANGELOG.md" %}
   </div>
 </div>
