Update changelog for version 1.0.13, add new GIF entry, and enhance GIF handling

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -280,6 +280,11 @@ body {
 
     overflow-x: auto;
   }
+
+  img {
+    image-rendering: pixelated;
+  }
+
   @include non-mobile {
     grid-area: neighbors;
   }
