feat: Refactor JavaScript structure and add filtering functionality
- Updated baselayout.njk to load scripts as modules.
- Introduced filters.ts for managing filtering logic based on years, months, countries, cities, and colors.
- Added gifs.ts to handle GIF loading and display functionality.
- Created script.ts to manage overall application logic, including modal handling and image loading.
- Added tsconfig.json for TypeScript configuration to support the new TypeScript files.

--- a/src/_includes/baselayout.njk
+++ b/src/_includes/baselayout.njk
@@ -18,10 +18,7 @@ title: Tsuru No Mundo - Daily
             href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
             rel="stylesheet">
         <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-        <script src="../js/img-loading.js"></script>
-        <script src="../js/script.js" defer></script>
-        <script src="../js/filters.js" defer></script>
-        <script src="../js/gifs.js" defer></script>
+        <script src="js/script.js" type="module" defer></script>
     </head>
     <body>
         {% include '_header.liquid' %}
