--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -63,6 +63,10 @@ a {
       position: absolute;
       left: 0;
       top: 0;
+      right: 0;
+      bottom: 0;
+      min-width: 100%;
+      min-height: 100%;
       width: 100%;
       height: auto;
       display: block;
